tests/build/cases/widget/name_conflict1.stderr
error[E0255]: the name `foo` is defined multiple times
  --> cases/widget/name_conflict1.rs:10:1
   |
7  | pub use crate::foo;
   |         ---------- previous import of the module `foo` here
...
10 | pub mod foo {
   | ^^^^^^^^^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
7  | pub use crate::foo as other_foo;
   |         ~~~~~~~~~~~~~~~~~~~~~~~

error[E0252]: the name `foo` is defined multiple times
 --> cases/widget/name_conflict1.rs:9:1
  |
7 | pub use crate::foo;
  |         ---------- previous import of the macro `foo` here
8 |
9 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ `foo` reimported here
  |
  = note: `foo` must be defined only once in the macro namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
